--- a/playground/vue-way.html
+++ b/playground/vue-way.html
@@ -14,20 +14,31 @@
     var div = document.querySelector('#app');
     var viewModel = {};
 
-    // Object.defineProperty(대상 객체, 객체의 속성, {
-    //   //정의할 내용
-    // });
+    //  즉시 실행 함수
+    (function () {
+      function init() {
+        //  Object.defineProperty(대상 객체, 객체의 속성, {
+        //   // 정의할 내용
+        // });
 
-    Object.defineProperty(viewModel, 'str', {
-      //속성에 접근했을 때의 동작을 정의
-      get: function () {
-        console.log('접근');
-      },
-      //속성에 값을 할당했을 때의 동작을 정의
-      set: function (newValue) {
-        console.log('할당', newValue);
+        Object.defineProperty(viewModel, 'str', {
+          //  속성에 접근했을 때의 동작을 정의
+          get: function () {
+            console.log('접근');
+          },
+          //  속성에 값을 할당했을 때의 동작을 정의
+          set: function (newValue) {
+            console.log('할당', newValue);
+            render(newValue);
+          }
+        })
+      }
+
+      function render() {
         div.innerHTML = newValue;
       }
+
+      init();
     })
   </script>
 </body>
