--- a/playground/component.html
+++ b/playground/component.html
@@ -11,6 +11,7 @@
     <div id="app">
         <app-header></app-header>
         <app-content></app-content>
+        <app-footer></app-footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -25,7 +26,14 @@
         });
 
         new Vue({
-            el: '#app'
+            el: '#app',
+            //  지역 컴포넌트 등록 방식
+            components: {
+                // 'key(컴포넌트 이름)': value(컴포넌트 내용)
+                'app-footer': {
+                    template: '<footer>footer</footer>'
+                }
+            }
         });
     </script>
 </body>
