--- a/playground/props.html
+++ b/playground/props.html
@@ -11,6 +11,7 @@
     <div id="app">
         <!-- v-bind:props 속성 이름="상위 컴포넌트의 데이터 이름" -->
         <app-header v-bind:propsdata="message"></app-header>
+        <app-content v-bind:propsdata="num"></app-content>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -20,13 +21,19 @@
             template: '<h1>{{ propsdata }}</h1>',
             props: ['propsdata']
         }
+        var appContent = {
+            template: '<div>{{ propsdata }}</div>',
+            props: ['propsdata']
+        }
         new Vue({
             el: '#app',
             components: {
-                'app-header': appHeader
+                'app-header': appHeader,
+                'app-content': appContent
             },
             data: {
-                message: 'hi'
+                message: 'hi',
+                num: 10
             }
         });
     </script>
