--- a/playground/data-binding.html
+++ b/playground/data-binding.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="app">
-        <p>{{ num }}</p>
+        <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
         <p>{{ doubleNum }}</p>
     </div>
 
@@ -19,6 +19,8 @@
             el: '#app',
             data: {
                 num: 10,
+                uuid: 'abc1234',
+                name: 'text-blue'
             },
             computed: {
                 doubleNum: function () {
