--- a/playground/data-binding.html
+++ b/playground/data-binding.html
@@ -11,6 +11,19 @@
     <div id="app">
         <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
         <p>{{ doubleNum }}</p>
+
+        <!-- if/else -->
+        <div v-if="loading">
+            Loading...
+        </div>
+        <div v-else>
+            test user has been logged in
+        </div>
+
+        <!-- show(false면 'display: none;'적용) -->
+        <div v-show="loading">
+            Loading...
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -20,7 +33,8 @@
             data: {
                 num: 10,
                 uuid: 'abc1234',
-                name: 'text-blue'
+                name: 'text-blue',
+                loading: true
             },
             computed: {
                 doubleNum: function () {
